force-app/main/default/objects/nDESIGN__Screen__c/nDESIGN__Screen__c.object-meta.xml
<CustomObject>
    <label>-D Screen</label>
    <nameField>
        <label>Screen Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>-D Screens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>