force-app/main/default/objects/nDESIGN__Screen__c/fields/nDESIGN__Disable_Print__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__Disable_Print__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Print</label>
    <type>Checkbox</type>
</CustomField>