force-app/main/default/objects/nDESIGN__Screen__c/fields/nDESIGN__lookupKey__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__lookupKey__c</fullName>
    <externalId>true</externalId>
    <label>lookupKey</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>