force-app/main/default/objects/nDESIGN__Screen__c/fields/nDESIGN__Show_Link_To_Context_Object__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__Show_Link_To_Context_Object__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If set then a link will be displayed to go back to the context object</description>
    <label>Show Context Object Name</label>
    <type>Checkbox</type>
</CustomField>