force-app/main/default/objects/nDESIGN__Screen__c/listViews/nDESIGN__All.listView-meta.xml
<ListView>
    <fullName>nDESIGN__All</fullName>
    <columns>NAME</columns>
    <columns>nDESIGN__Show_Link_To_Context_Object__c</columns>
    <filterScope>Everything</filterScope>
    <label>Default</label>
    <language>en_US</language>
</ListView>